<resources>
    <string name="app_name">Calculator</string>

    <string name="btn_plus">+</string>
    <string name="btn_sub">-</string>
    <string name="btn_mult">*</string>
    <string name="btn_dec">/</string>
    <string name="btn_eval">=</string>
    <string name="btn_sqrt">√</string>
<!--    <string name="btn_double">X²</string>-->
    <string name="btn_make_double">,</string>
    <string name="btn_make_negative">±</string>
    <string name="btn_clean">C</string>
    <string name="btn_rever">ˉ¹</string>

    <string name="tv_def">0</string>






    <string name="btn_1">1</string>
    <string name="btn_2">2</string>
    <string name="btn_3">3</string>
    <string name="btn_4">4</string>
    <string name="btn_5">5</string>
    <string name="btn_6">6</string>
    <string name="btn_7">7</string>
    <string name="btn_8">8</string>
    <string name="btn_9">9</string>
    <string name="btn_0">0</string>


</resources>